<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/header_title"
        android:layout_height="wrap_content"
        android:text="Login to Continue"
        android:alpha=".7"
        android:visibility="invisible"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/loginHeader"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_medium"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/loginName"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/loginPassword"
                style="@style/modifiedEditText"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/parent"
            android:textStyle="bold"
            android:textSize="8sp"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/forgotPassTv"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="15dp"
            android:text="Forgot Password ?"
            android:gravity="center" />

        <Button
            android:id="@+id/loginButton"
            style="@style/loginButton"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_light"
            android:text="Login"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"/>

        <TextView
            style="@style/parent"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textSize="8sp"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/dontHaveAccountTv"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="end" />

    </LinearLayout>




</LinearLayout>