<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/home_bg"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/toolbarTextView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_lightltalic"
            android:foregroundGravity="center_vertical"
            android:text="Book Trip"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="16dp"
        android:background="@drawable/textview_shape_transparent"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Please Fill out Information Appropriately"
        android:textColor="@color/colorBlue"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textview_shape_transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:paddingBottom="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInpu"
                android:visibility="invisible"
                style="@style/parent">

                <EditText
                    android:id="@+id/register"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/login_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_below="@+id/textInpu"
                style="@style/parent">

                <EditText
                    android:id="@+id/NameEt"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/login_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/parent"
                android:layout_below="@+id/textInputName">

                <EditText
                    android:id="@+id/PhoneEt"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_below="@+id/textInputMobile">

                <EditText
                    android:id="@+id/EmailEt"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textNofPeople"
                style="@style/parent"
                android:layout_below="@+id/textInputEmail">

                <EditText
                    android:id="@+id/no_ofPeopleEt"
                    style="@style/modifiedEditText"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <Button
            android:id="@+id/nextStepBtn"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorBlue"
            android:src="@drawable/ic_next_orange"
            android:text="Next" />


    </RelativeLayout>

</RelativeLayout>